Refactoring names of endpoints
