# src/routers/user.js
@@ -1,9 +1,7 @@
 const express = require('express');
 const router = express.Router();
 const User = require('../mongo/model/user');
-const Recipe = require('../mongo/model/recipe')
 const auth = require('../middleware/auth');
-const permission = require('../middleware/permission');
 const EmailToken = require('../mongo/model/emailToken');
 const cache = require('../middleware/cache')
 const constants = require("../data/constants");
@@ -150,6 +148,7 @@ router.post('/users/login', async (req, res) => {
     try {
         const user = await User.findByCredentials(req.body.email, req.body.password);
         await user.generateAuthToken();
+
         res.status(200).send(
             {
                 token: user.token
@@ -343,72 +342,9 @@ router.patch('/users', auth, async (req, res) => {
     }
 })
 
-router.post('/users/likeRecipe', auth, async (req, res) => {
-    /*
-    #swagger.tags = ['User']
-    #swagger.description = 'Endpoint for a user to like a recipe'
-
-    #swagger.parameters['recipeName'] = {
-        in: 'body',
-        description: 'Name of the recipe to be liked',
-        required: true,
-        type: 'string',
-        schema: {
-            example: 'Pasta with mozarella cheese'
-        }
-     }
-    #swagger.responses[200] = {
-        schema: {
-            "text": "The meal is liked successfully"
-        }
-    }
-    #swagger.responses[404] = {
-        schema: {
-            "text": "Recipe does not exist"
-        }
-    }
-    #swagger.responses[400] = {
-        schema: {
-            "text": "The meal is already liked"
-        }
-    }
-*/
-    try {
-        const user = req.user;
-        let mealIsAlreadyLiked = false;
-        const recipeName = req.body.recipeName;
-
-        const recipe = await Recipe.findByName(recipeName);
-
-        if (!recipe) {
-            return res.status(404).send("Recipe does not exist");
-        }
-
-        if (user.likedRecipes !== null) {
-            if (user.likedRecipes.includes(recipe._id)) {
-                mealIsAlreadyLiked = true;
-            }
-        }
-        if (!mealIsAlreadyLiked) {
-            user.likedRecipes.push(recipe._id);
-            user.save();
-
-            recipe.numberOfLikes = recipe.numberOfLikes + 1;
-            recipe.likedUsers.push(user._id);
-            recipe.save();
-
-            return res.status(200).send("The meal is liked successfully");
-        } else {
-            return res.status(400).send("The meal is already liked");
-        }
-    } catch (error) {
-        return res.status(400).send(error);
-    }
-})
-
 // TODO needs to tested
 // TODO needs to be documented
-router.get('/users/myLikedRecipes', auth, cache(constants.CACHEPERIOD), async (req, res) => {
+router.get('/users/liked_recipes', auth, cache(constants.CACHEPERIOD), async (req, res) => {
     let user = req.user;
     try {
         // only return the name field of the liked recipes
@@ -421,41 +357,11 @@ router.get('/users/myLikedRecipes', auth, cache(constants.CACHEPERIOD), async (r
 
 // TODO test
 // TODO document
-router.get('/users/myLikedIngredientFrequencies', auth, cache(constants.CACHEPERIOD), async (req, res) => {
-    let user = req.user;
-    const result = await user.getIngredientFrequencyOfLikedMeals();
-    res.status(200).send(result);
-})
-
-
-router.get('/users/list', auth, permission('userList'),
-    /*    #swagger.tags = ['User']
-      #swagger.description = 'Endpoint to get a list of users, requires authentication.'
-    */
-    async (req, res) => {
-        try {
-            const users = await User.find({});
-            console.log(users);
-            return res.status(200).send(users);
-        } catch (e) {
-            res.status(404).send(e + "");
-        }
-    })
-
-router.delete('/users/deleteAll', auth, permission('deleteAllUsers'),
-    /*
-        #swagger.tags = ['User']
-        #swagger.description = 'Endpoint to delete all users'
-    */
-
-    async (req, res) => {
-        try {
-            await User.deleteMany({});
-            res.send("Successfully delete all users");
-        } catch (e) {
-            res.status(500).send(e + "");
-        }
-    })
+// router.get('/users/myLikedIngredientFrequencies', auth, cache(constants.CACHEPERIOD), async (req, res) => {
+//     let user = req.user;
+//     const result = await user.getIngredientFrequencyOfLikedMeals();
+//     res.status(200).send(result);
+// })
 
 
 module.exports = router;
